fixed links on mobile

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -23,3 +23,9 @@
 .cert {
   color: black;
 }
+
+@media (max-width: 435px) {
+  .navbar a {
+    width: 45%;
+  }
+}
